# ai-engineering-runtime

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
.cursor/rules/: boundaries.mdc  scope-control.mdc  workflow.mdc  writeback.mdc
ai/: README.md
ai/skill/: plan-to-spec.md  session-closeout.md  skill-registry.md
docs/change-summaries/: 20260322-003-writeback-classifier-closeout.md  20260322-004-task-spec-readiness-check-closeout.md  20260322-005-validation-collect-foundation-closeout.md  20260322-006-followup-suggester-closeout.md  20260322-007-executor-dispatch-adapter-shell-closeout.md  20260322-runtime-foundation-closeout.md  20260327-001-executor-adapter-codex-v1-closeout.md  20260327-002-executor-run-poll-resume-lifecycle-closeout.md
docs/facts/: project-scope.md
docs/runtime/: architecture.md  protocol.md  roadmap.md  state-machine.md
project/: CURRENT.md  DOC_MAP.md  README.md
project/decisions/: README.md
skills/: plan-to-spec.md
tests/: support.py  test_artifact_refs.py  test_artifacts.py  test_cli.py  test_executor_dispatch.py  test_executor_run_lifecycle.py  test_followup_package.py  test_followup_suggester.py  test_gate_evaluator.py  test_history_projection.py  test_history_selection.py  test_integration_workflows.py  test_node_contracts.py  test_plan_readiness_check.py  test_plan_to_spec.py  test_product_cli.py  test_result_log_replay.py  test_run_summary.py  test_task_spec_readiness_check.py  test_terminal_state.py  test_validation_collect.py  test_validation_rollup.py  test_writeback_classifier.py  test_writeback_package.py
(+135 files in other folders)
