[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-engineering-runtime"
version = "0.1.0"
description = "CLI-first workflow runtime for SOP artifacts."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
ae = "ai_engineering_runtime.cli:main"
ae-runtime = "ai_engineering_runtime.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
